syntax = "proto3";
package gwc.gateway.v1;

import "amino/amino.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "gwc/gateway/v1/params.proto";
// Import types
import "gwc/gateway/v1/types.proto";

option go_package = "gwc/x/gateway/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/gwc/gateway/v1/params";
  }

  // StorageEndpoints queries the registered storage endpoints.
  rpc StorageEndpoints(QueryStorageEndpointsRequest) returns (QueryStorageEndpointsResponse) {
    option (google.api.http).get = "/gwc/gateway/v1/storage_endpoints";
  }

  // --- CSU session queries ---

  rpc Session(QuerySessionRequest) returns (QuerySessionResponse) {
    option (google.api.http).get = "/gwc/gateway/v1/sessions/{session_id}";
  }

  rpc SessionsByOwner(QuerySessionsByOwnerRequest) returns (QuerySessionsByOwnerResponse) {
    option (google.api.http).get = "/gwc/gateway/v1/sessions/by_owner/{owner}";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

// QueryStorageEndpointsRequest is request type for the Query/StorageEndpoints RPC method.
message QueryStorageEndpointsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryStorageEndpointsResponse is response type for the Query/StorageEndpoints RPC method.
message QueryStorageEndpointsResponse {
  repeated StorageInfo storage_infos = 1;
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QuerySessionRequest {
  string session_id = 1;
}

message QuerySessionResponse {
  Session session = 1 [(gogoproto.nullable) = false];
}

message QuerySessionsByOwnerRequest {
  string owner = 1;
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

message QuerySessionsByOwnerResponse {
  repeated Session sessions = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
